syntax = "proto3";

option go_package = "github.com/shamssahal/toll-calculator/types";

service Aggregator{
    rpc Aggregate(AggregateRequest) returns (None);
}

message AggregateRequest {
    int64 ObuID = 1;
    double Value = 2;
    int64 Unix = 3;
    string RequestID = 4;
}

message None {}